made result-summary-container a flex and removed height property from your-result-card to prevent overflow

--- a/results-summary-component-main/styles/style.css
+++ b/results-summary-component-main/styles/style.css
@@ -18,6 +18,7 @@ main {
 .result-summary-container{
     width:50%;
     height: 50vh;
+    display: flex;
     background-color: aliceblue;
 }
 
@@ -26,7 +27,6 @@ main {
     flex-direction: column;
     align-items: center;
     width: 50%;
-    height: 50vh;
     background-color: hsl(252, 100%, 67%);
     padding: 32px;
 }
